Removed useless styles, fixed event jumping on hover, added default data model to getSettings

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,7 @@ full-calendar {
 .fullcalendar {
     width: 100%;
 }
+
+a.fc-daygrid-dot-event:hover {
+    padding: 2px;
+}
